--- a/groovin/me.html
+++ b/groovin/me.html
@@ -55,13 +55,13 @@
 <section id="intro">
 			<ul id="slippry-slider">
 			  <li>
-				<a href="#slide1"><img src="assets/img/slide/1.jpg" alt="Welcome to Groovin!"></a>
+				<a href="#slide1"><img src="assets/img/slide/A.jpg" alt="Welcome to Groovin!"></a>
 			  </li>
 			  <li>
-				<a href="#slide2"><img src="assets/img/slide/2.jpg"  alt="This is an awesome bootstrap template"></a>
+				<a href="#slide2"><img src="assets/img/slide/A1.jpg"  alt="This is an awesome bootstrap template"></a>
 			  </li>
 			  <li>
-				<a href="#slide3"><img src="assets/img/slide/3.jpg" alt="Check it out, you are going to <span class='red'>♥</span> it :)"></a>
+				<a href="#slide3"><img src="assets/img/slide/A2.jpg" alt="Check it out, you are going to <span class='red'>♥</span> it :)"></a>
 			  </li>
 			</ul>
 </section>
