--- a/groovin/me.html
+++ b/groovin/me.html
@@ -106,11 +106,11 @@
 		<div class="col-md-12">
 						<ul class="grid effect" id="grid">
 						<li>
-							<a class="fancybox" data-fancybox-group="gallery" title="Portfolio name" href="assets/img/portfolio/1.jpg">
-								<img src="assets/img/portfolio/1.jpg" alt="" />
+							<a class="fancybox" data-fancybox-group="gallery" title="Portfolio name" href="assets/img/portfolio/B.jpg">
+								<img src="assets/img/portfolio/B.jpg" alt="" />
 							</a>						
 						</li>
-						<li><a href="assets/img/portfolio/B.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/B.jpg" alt="" /></a></li>
+						
 						<li><a href="assets/img/portfolio/B1.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/B1.jpg" alt="" /></a></li>
 						<li><a href="assets/img/portfolio/B2.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/B2.jpg" alt="" /></a></li>
 						<li><a href="assets/img/portfolio/B3.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/B3.jpg" alt="" /></a></li>
@@ -123,7 +123,6 @@
 						<li><a href="assets/img/portfolio/B10.jpg" class="fancybox" data-fancybox-group="gallery" title="Portfolio name"><img src="assets/img/portfolio/B10.jpg" alt="" /></a></li>
 						
 						</ul>
-		</div>
 	</div>
 </div>
 </section>
