--- a/groovin/me.html
+++ b/groovin/me.html
@@ -58,7 +58,7 @@
 				<a href="#slide1"><img src="assets/img/slide/A5.jpg" alt="世新大學"></a>
 			  </li>
 			  <li>
-				<a href="#slide2"><img src="assets/img/slide/A4.jpg"  alt=""></a>
+				<a href="#slide2"><img src="assets/img/slide/A6.jpg"  alt="東園國小"></a>
 			  </li>
 			  <li>
 				<a href="#slide3"><img src="assets/img/slide/A1.jpg" alt="陽明高中"></a>
